--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # -----------------------
 # 1. 사이트 기본 정보 (수정 필수)
 # -----------------------
-title: "Yangbam's Lounge"      # 사이트 제목 (브라우저 탭에 표시됨)
+title: "Yangbam Lab"      # 사이트 제목 (브라우저 탭에 표시됨)
 email: yangbam90@gmail.com   # 연락처 이메일 (선택 사항)
 description: >-                # 사이트 설명 (구글 검색 결과에 표시됨)
-  양밤의 개인 홈페이지입니다. 유용한 정보와 트렌드를 큐레이션합니다.
+  심리테스트, 계산기, IT 변환기 등 유용한 도구와 재미있는 콘텐츠를 제공하는 Yangbam Lab입니다.
   
 author:
   name: "Yangbam"              # 운영자 닉네임
